@@ -1,53 +1,51 @@
 package com.proyectoGrupo.models.dao;
 
 import com.proyectoGrupo.db.Conexion;
-import com.proyectoGrupo.models.domain.Salon;
-import com.proyectoGrupo.models.idao.ISalonDao;
+import com.proyectoGrupo.models.domain.CarreraTecnica;
+import com.proyectoGrupo.models.idao.ICarreraTecnicaDao;
 import java.sql.Connection;
 import java.sql.PreparedStatement;
 import java.sql.ResultSet;
 import java.sql.SQLException;
 import java.util.ArrayList;
 import java.util.List;
-import com.proyectoGrupo.controller.ServletSalon;
-/**
- * --add-modules javafx.controls,javafx.fxml
- *
- * @author Denil José Parada Cabrera
- * @date 19/08/2021
- * @time 05:30:48 PM
- * @codigoTecnico: IN5BV
- */
-public class SalonDaoImpl implements ISalonDao {
 
-    private static final String SQL_SELLECT = "select salon_id, capacidad,descripcion,nombre_salon from Salon;";
-    private static final String SQL_DELETE = "delete from Salon where salon_id = ?";
+/**
+ *
+ * @author Hugo Daniel Velasquez Patzan Codigo Tecnico IN5BV
+ * @date 27-ago-2021
+ * @time 16:55:04
+ */
+public class CarreraTecnicaDaoImpl implements ICarreraTecnicaDao {
+
+ 
+    private static final String SQL_SELECT = "SELECT codigo_carrera, nombres FROM Carrera_tecnica;";
+    private static final String SQL_DELETE = "DELETE FROM Carrera_tecnica where codigo_carrera = ?";
+
     Connection conn = null;
     PreparedStatement pstmt = null;
     ResultSet rs = null;
-    Salon salon = null;
-    List<Salon> ListaSalon = new ArrayList<>();
+    CarreraTecnica carreraTecnica = null;
+   
+    List<CarreraTecnica> listaCarreraTecnica = new ArrayList<>();
+
 
     @Override
-    public List<Salon> listar() {
+    public List<CarreraTecnica> listar() {
         try {
             conn = Conexion.getConnection();
-            pstmt = conn.prepareStatement(SQL_SELLECT);
+            pstmt = conn.prepareStatement(SQL_SELECT);
             rs = pstmt.executeQuery();
-            while (rs.next()) {
-                int idSalon = rs.getInt("salon_id");
-                int capacidad = rs.getInt("capacidad");
-                String descripcion = rs.getString("descripcion");
-                String nombre_salon = rs.getString("nombre_salon");
 
-                salon = new Salon(idSalon, capacidad, descripcion, nombre_salon);
-                ListaSalon.add(salon);
-                
+            while (rs.next()) {
+                String codigoCarrera = rs.getString("codigo_carrera");
+                String nombre = rs.getString("nombres");
+
+                carreraTecnica = new CarreraTecnica(codigoCarrera, nombre);
+                listaCarreraTecnica.add(carreraTecnica);
             }
         } catch (SQLException e) {
             e.printStackTrace(System.out);
-            System.out.println("ecepcion de tipo sql");
-
         } catch (Exception e) {
             e.printStackTrace(System.out);
         } finally {
@@ -55,42 +53,40 @@ public class SalonDaoImpl implements ISalonDao {
             Conexion.close(pstmt);
             Conexion.close(conn);
         }
-        return ListaSalon;
+        return listaCarreraTecnica;
     }
 
     @Override
-    public Salon encontrar(Salon salon) {
+    public CarreraTecnica encontrar(CarreraTecnica carreraTecnica) {
         throw new UnsupportedOperationException("Not supported yet."); //To change body of generated methods, choose Tools | Templates.
     }
 
     @Override
-    public int insertar(Salon salon) {
+    public int insertar(CarreraTecnica carreraTecnica) {
         throw new UnsupportedOperationException("Not supported yet."); //To change body of generated methods, choose Tools | Templates.
     }
 
     @Override
-    public int actualizar(Salon salon) {
+    public int actualizar(CarreraTecnica carreraTecnica) {
         throw new UnsupportedOperationException("Not supported yet."); //To change body of generated methods, choose Tools | Templates.
     }
 
     @Override
-    public int eliminar(Salon salon) {
+    public int eliminar(CarreraTecnica carreraTecnica) {
         int rows = 0;
         try {
             conn = Conexion.getConnection();
             pstmt = conn.prepareStatement(SQL_DELETE);
-            pstmt.setInt(1, salon.getIdSalon());
+            pstmt.setString(1, carreraTecnica.getCodigoCarrera());
             System.out.println(pstmt.toString());
             rows = pstmt.executeUpdate();
-        } catch (Exception e) {
+        } catch (SQLException e) {
             e.printStackTrace(System.out);
         } finally {
             Conexion.close(pstmt);
             Conexion.close(conn);
-
         }
         return rows;
+    
     }
-
-   
 }
